Fix Disappearing scroll-bar
The overflow value that given by patternfly4 is valued as hidden
which means if there is an overflow with a component size, the scroll-bar stays hidden and disabled.
That's why it is needed to overlap original settings

Bug-Url: https://bugzilla.redhat.com/show_bug.cgi?id=1885140

--- a/dashboard/static/app.css
+++ b/dashboard/static/app.css
@@ -217,6 +217,10 @@ div.curtains-with-footer {
 	align-items: center;
 }
 
+.modal {
+	overflow: auto !important;
+}
+
 .modal-body .entry {
 	word-wrap: break-word;
 	white-space: normal;
